--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <name>xmen</name>
     <description>xmen</description>
     <properties>
+        <sonar.organization>bazzo03</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <java.version>17</java.version>
     </properties>
 
@@ -155,14 +157,26 @@
                         <exclude>**/domain/entity/**</exclude>
                         <exclude>**/domain/MovementType.*</exclude>
                         <exclude>**/infrastructure/mapper/mutant/*</exclude>
+                        <exclude>**/XmenApplication*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>jacoco-report</id>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <formats>
+                                <format>XML</format>
+                            </formats>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
