--- a/pom.xml
+++ b/pom.xml
@@ -155,8 +155,12 @@
                 <configuration>
                     <excludes>
                         <exclude>**/domain/entity/**</exclude>
-                        <exclude>**/domain/MovementType.*</exclude>
                         <exclude>**/infrastructure/mapper/mutant/*</exclude>
+                        <exclude>**/application/XmenApplicationConfig.java</exclude>
+                        <exclude>**/infrastructure/adapter/stats/StatsValueResponse.java</exclude>
+                        <exclude>**/infrastructure/adapter/stats/StatsResponse.java</exclude>
+                        <exclude>**/infrastructure/adapter/mutant/DnaResponse.java</exclude>
+                        <exclude>**/infrastructure/adapter/mutant/DnaRequest.java</exclude>
                         <exclude>**/XmenApplication*</exclude>
                     </excludes>
                 </configuration>
