--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,13 @@
                             </formats>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>jacoco-report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
